<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bool</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="emailText">email</string>
    <string name="passwordText">password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_text">We will create an account for you!</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="editpic">Edit Picture</string>
    <string name="gender">Gender</string>
    <string name="race">Race</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="Occupation">Occupation</string>
    <string name="age">Age</string>
    <string name="logout">Logout</string>
    <string name="bools">My Bools</string>
    <string name="groups">Groups</string>

    <string-array name="races">
        <item>Race</item>
        <item>Caucasian</item>
        <item>African American/Black</item>
        <item>Hispanic/Latino</item>
        <item>Asian</item>
        <item>Middle eastern</item>
        <item>Pacific Islander</item>
        <item>Native American/Alaskan</item>
    </string-array>

    <string-array name="occupations">
        <item>Occupation</item>
        <item>Intern</item>
        <item>Analyst</item>
        <item>Manager</item>
        <item>Director</item>
        <item>Engineer</item>
        <item>Owner</item>
        <item>Student</item>
    </string-array>


    <string-array name="states">
        <item>State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
</resources>
